@@ -1,6 +1,6 @@
 #define RUBY_VERSION "2.0.0"
 #define RUBY_RELEASE_DATE "2015-01-27"
-#define RUBY_PATCHLEVEL 618
+#define RUBY_PATCHLEVEL 619
 
 #define RUBY_RELEASE_YEAR 2015
 #define RUBY_RELEASE_MONTH 1
